sign in no longer wraps

--- a/menu-style.css
+++ b/menu-style.css
@@ -89,8 +89,7 @@
         color: white;
     }
 }
-.dropdown-list > li.selected
-{
+.dropdown-list > li.selected {
     color: orange;
     animation: none;
 }
