--- a/style.css
+++ b/style.css
@@ -114,12 +114,12 @@ header {
     top: 25%;
     width: 30%;
     padding: 0%;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     margin-right: 5%;
+    white-space: nowrap;
 }
 
-#profile
-{
+#profile {
     height: 100%;
     width: auto;
 }
